--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Sharkoux/table"
+    "url": "git+https://github.com/Sharkoux/tables"
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
